change mobile breadcrumbs & homepage style.

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_breadcrumbs.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_breadcrumbs.less
@@ -19,6 +19,9 @@
                 color: #155da4 !important;
             }
             color: #333333;
+            .item.brands {
+                display: none;
+            }
 		}
 		.items > li{
 			text-transform:none;
