--- a/app/design/frontend/Codazon/fastest/fashion/web/css/custom.css
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/custom.css
@@ -17,3 +17,16 @@
     font-style: normal;
     font-display: block;
 }
+
+input {
+    outline: none;
+    -webkit-appearance: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+select{
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select:none;
+}
