change input style.

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/custom.css
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/custom.css
@@ -18,7 +18,7 @@
     font-display: block;
 }
 
-input {
+input[type="text"], input[type="password"], input[type="url"], input[type="tel"], input[type="search"], input[type="number"], input[type="datetime"], input[type="email"] {
     outline: none;
     -webkit-appearance: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
