--- a/app/design/frontend/Codazon/fastest/hightech3/Codazon_ProductFilter/templates/custom_list.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech3/Codazon_ProductFilter/templates/custom_list.phtml
@@ -86,7 +86,11 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 							                <?php endif ?>
 
                                             <?php if($block->isShow('review')): ?>
-                                                <?php echo $block->getReviewsSummaryHtml($_product, $templateType); ?>
+                                                <?php if($block->getReviewsSummaryHtml($_product, $templateType)): ?>
+                                                    <?php echo $block->getReviewsSummaryHtml($_product, $templateType); ?>
+                                                <?php else: ?>
+                                                    <div class="product-reviews-summary short"></div>
+                                                <?php endif ?>
                                             <?php endif ?>
 
 											<?php if($block->isShow('price')): ?>
