--- a/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductFilter/templates/grid_slider_1.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductFilter/templates/grid_slider_1.phtml
@@ -152,7 +152,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
                                     </div>
                                 <?php endif; ?>
                                 <?php if($block->isShow('review')): ?>
-                                    <?php if($block->getReviewsSummaryHtml($_product, $templateType)): ?>
+                                    <?php if(trim($block->getReviewsSummaryHtml($_product, $templateType)) != ""): ?>
                                         <?php echo $block->getReviewsSummaryHtml($_product, $templateType); ?>
                                     <?php else: ?>
                                         <div class="product-reviews-summary short"></div>
