--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
@@ -105,6 +105,12 @@
                             &:extend(.abs-button-l all);
                             display: block;
                             width: 100%;
+                            &:hover{
+                                .abs-style(#ffffff, #4F85BB, #4F85BB);
+                            }
+                            &:active{
+                                .abs-style(#ffffff, #10477D, #10477D);
+                            }
                         }
                     }
                 }
