--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -562,11 +562,14 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			margin-bottom:0;
 			font-size:12px;
 			padding: 8px 30px;
-            .abs-style( @btn_productitem_text, @btn_productitem_border,@btn_productitem_background);
+            .abs-style(#ffffff, #155da4, #155da4);
             border: 1px solid #155da4;
 			&:hover{
-                .abs-style(#155da4, #155da4, #ffffff);
+                .abs-style(#ffffff, #4F85BB, #4F85BB);
 			}
+            &:active{
+                .abs-style(#ffffff, #10477D, #10477D);
+            }
 		}
 	}
 }
