--- a/app/design/frontend/Codazon/fastest/hightech2/Codazon_ProductFilter/templates/custom_list.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Codazon_ProductFilter/templates/custom_list.phtml
@@ -85,7 +85,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 							                </strong>
 							                <?php endif ?>
                                             <?php if($block->isShow('review')): ?>
-                                                <?php if($block->getReviewsSummaryHtml($_product, $templateType)): ?>
+                                                <?php if(trim($block->getReviewsSummaryHtml($_product, $templateType)) != ""): ?>
                                                     <?php echo $block->getReviewsSummaryHtml($_product, $templateType); ?>
                                                 <?php else: ?>
                                                     <div class="product-reviews-summary short"></div>
