--- a/app/code/Ecopure/Checkout/view/frontend/templates/custom-block.phtml
+++ b/app/code/Ecopure/Checkout/view/frontend/templates/custom-block.phtml
@@ -25,7 +25,7 @@
 <div class="custom-proterction">
     <div class="custom-proterction-title">
         <span>Buyer Protection:</span>
-        <a class="custom-style-a" href="#">Learn More</a>
+        <a class="custom-style-a" href="/return-refund-policy">Learn More</a>
     </div>
 
     <div class="custom-proterction-contentbox">
