--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/social.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/social.phtml
@@ -44,7 +44,7 @@ $_themeHelper = $this->helper('Codazon\ThemeOptions\Helper\Data');
         <span>FREE SHIPPING</span>
         <span> on all orders</span>
     </div>
-    <a class="custom-style-a" href="#">Learn More</a>
+    <a class="custom-style-a" href="/shipping-policy">Learn More</a>
 </div>
 <div class="custom-proterction">
     <div class="custom-proterction-title">
@@ -58,7 +58,7 @@ $_themeHelper = $this->helper('Codazon\ThemeOptions\Helper\Data');
         </div>
         <div class="custom-proterction-contentbox-info2">
             <span>Full refund if the item is not as described</span>
-            <a class="custom-style-a" href="#">Learn More</a>
+            <a class="custom-style-a" href="/return-refund-policy">Learn More</a>
         </div>
     </div>
 </div>
