--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
@@ -80,6 +80,15 @@
                         border-radius: 0 4px 4px 0;
                         line-height: 20px;
                         padding: 7px 15px;
+                        &:focus {
+                            .abs-style(#ffffff, #155da4, #155da4);
+                        }
+                        &:hover{
+                            .abs-style(#ffffff, #4F85BB, #4F85BB);
+                        }
+                        &:active{
+                            .abs-style(#ffffff, #10477D, #10477D);
+                        }
                     }
                 }
             }
@@ -134,9 +143,14 @@
                 margin: 0;
                 border: 1px solid #155da4;
                 border-radius: 4px;
-                &:hover {
-                    background: #FFFFFF;
-                    color: #155DA4;
+                &:focus {
+                    .abs-style(#ffffff, #155da4, #155da4);
+                }
+                &:hover{
+                    .abs-style(#ffffff, #4F85BB, #4F85BB);
+                }
+                &:active{
+                    .abs-style(#ffffff, #10477D, #10477D);
                 }
             }
             .item {
@@ -313,23 +327,34 @@
                     }
                 }
                 .action-edit {
-                    width: 43px;
+                    width: 46px;
                     right: 120px;
                     margin-right: 0;
                     text-decoration: none;
+                    color: #155da4;
                     span {
                         padding-left: 6px;
                         position: relative;
                         vertical-align: middle;
                     }
+                    &:hover {
+                        &:before {
+                            color: #155DA4;
+                        }
+                    }
                 }
                 .action-delete {
                     width: 70px;
-                    text-decoration: none;
+                    text-decoration: none !important;
                     span {
                         padding-left: 6px;
                         position: relative;
                         vertical-align: middle;
+                    }
+                    &:hover {
+                        &:before {
+                            color: #155DA4;
+                        }
                     }
                 }
 				.rtl-layout &{
