--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_buttons.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_buttons.less
@@ -127,6 +127,13 @@ button.primary{
 		span:before{
 			display:none;
 		}
+        .abs-style(#ffffff, #155da4, #155da4);
+        &:hover{
+            .abs-style(#ffffff, #4F85BB, #4F85BB);
+        }
+        &:active{
+            .abs-style(#ffffff, #10477D, #10477D);
+        }
 	}
 }
 .sidebar .block-wishlist .action.tocart{
