--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -31,6 +31,15 @@
 		background:@main_border;
 	}
 }
+/* custom style */
+.catalogsearch-result-index {
+    .page-title-wrapper {
+        .page-title {
+            display: none;
+        }
+    }
+}
+/* custom style end */
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
 	.abs-line-right:after,
 	.abs-line-left:before{
@@ -557,10 +566,10 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			margin-bottom:0;
 			font-size:12px;
 			padding: 8px 30px;
-			.abs-style(#333333, @main_border, #ffffff);
-			&:hover{
-				.abs-style( @btn_productitem_text, @btn_productitem_border,@btn_productitem_background)
-			}
+            .abs-style(#ffffff, #155da4, #155da4);
+            &:active{
+                .abs-style(#ffffff, #10477D, #10477D);
+            }
 		}
 	}
 }
