change checkout style.

--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping-method.html
@@ -37,9 +37,20 @@
         margin-right: 0;
         border-radius: 0 4px 4px 0;
     }
+    #discount-form > div.actions-toolbar > div > button:focus {
+        color: #ffffff;
+        border-color: #155da4;
+        background: #155da4;
+    }
     #discount-form > div.actions-toolbar > div > button:hover {
-        background: #155DA4;
-        color: #FFFFFF;
+        color: #ffffff;
+        border-color: #4f85bb;
+        background: #4f85bb;
+    }
+    #discount-form > div.actions-toolbar > div > button:active {
+        color: #ffffff;
+        border-color: #10477d;
+        background: #10477d;
     }
 </style>
 <!--Shipping method template-->
@@ -84,7 +95,7 @@
                  translate="'Sorry, no quotes are available for this order at this time'" />
         </div>
         <div class="custom-style-shoppin-method">
-            See our 
+            See our
             <a href="#">Shipping Policy</a>
         </div>
     </div>
