--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
@@ -314,6 +314,21 @@
         color: #FFFFFF;
         border: none;
     }
+    #sidebar_place_order:focus {
+        color: #ffffff;
+        border-color: #155da4;
+        background: #155da4;
+    }
+    #sidebar_place_order:hover {
+        color: #ffffff;
+        border-color: #4f85bb;
+        background: #4f85bb;
+    }
+    #sidebar_place_order:active {
+        color: #ffffff;
+        border-color: #10477d;
+        background: #10477d;
+    }
     .stripe-payments-brand {
         right: -45px;
     }
