--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/forgotpassword.phtml
@@ -44,9 +44,20 @@
         border: none;
         border-radius: 4px;
     }
+    #form-validate > div.actions-toolbar > div.primary > button:focus {
+        color: #ffffff;
+        border-color: #155da4;
+        background: #155da4;
+    }
     #form-validate > div.actions-toolbar > div.primary > button:hover {
         color: #ffffff;
-        background: #155da4;
+        border-color: #4f85bb;
+        background: #4f85bb;
+    }
+    #form-validate > div.actions-toolbar > div.primary > button:active {
+        color: #ffffff;
+        border-color: #10477d;
+        background: #10477d;
     }
     @media screen and ( max-width: 768px ) {
         #maincontent {
@@ -77,7 +88,7 @@
     <div class="custom-style-forgotpassword-title">Forgot Password</div>
 
     <fieldset class="fieldset" data-hasrequired="<?php /* @escapeNotVerified */ echo __('* Required Fields') ?>">
-        
+
         <div class="field email required custom-style-forgotpassword-emailbox">
             <div class="custom-style-forgotpassword-email">Email</div>
             <label for="email_address" class="label"><span><?php /* @escapeNotVerified */ echo __('Email') ?></span></label>
