--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_forms.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_forms.less
@@ -231,12 +231,11 @@ select:focus ~ .tooltip .tooltip-content {
 
 }
 .authentication-wrapper{
-	margin-top:-85px !important;
+	margin-top:-74px !important;
 	.action.action-auth-toggle{
 		.abs-link(@header_text, @header_hover_text);
         font-size: 16px;
         line-height: 19px;
-        color: #fff !important;
         cursor: pointer;
 		&:before{
             display: none;
@@ -283,7 +282,7 @@ select:focus ~ .tooltip .tooltip-content {
         margin-top: -44px !important;
         margin-right: 16px;
         .action.action-auth-toggle{
-            color: #fff;
+            color: #333333;
         }
 	}
 	.cdz-login-form-dropdown{
