--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -83,6 +83,65 @@
 			float:right;
 		}
 		.loader{ padding:300px 0}
+        .fieldset.hidden-fields {
+            margin-bottom: 16px;
+        }
+        .action {
+            &.login.primary {
+                &:focus {
+                    border: none;
+                    .abs-style(#ffffff, #155da4, #155da4);
+                }
+                &:hover {
+                    .abs-style(#ffffff, #4F85BB, #4F85BB);
+                }
+                &:active{
+                    border: none;
+                    .abs-style(#ffffff, #10477D, #10477D);
+                }
+            }
+            &.primary.action-save-address {
+                &:focus {
+                    border: none;
+                    .abs-style(#ffffff, #155da4, #155da4);
+                }
+                &:hover {
+                    .abs-style(#ffffff, #4F85BB, #4F85BB);
+                }
+                &:active{
+                    border: none;
+                    .abs-style(#ffffff, #10477D, #10477D);
+                }
+            }
+            &.action-select-shipping-item {
+                height: 40px;
+                border-radius: 4px;
+                border: none;
+                &:focus {
+                    .abs-style(#ffffff, #155da4, #155da4);
+                }
+                &:hover {
+                    .abs-style(#ffffff, #4F85BB, #4F85BB);
+                }
+                &:active{
+                    .abs-style(#ffffff, #10477D, #10477D);
+                }
+            }
+            &.action-show-popup {
+                height: 40px;
+                border-radius: 4px;
+                border: none;
+                &:focus {
+                    .abs-style(#ffffff, #155da4, #155da4);
+                }
+                &:hover {
+                    .abs-style(#ffffff, #4F85BB, #4F85BB);
+                }
+                &:active{
+                    .abs-style(#ffffff, #10477D, #10477D);
+                }
+            }
+        }
     }
 }
 
