--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -1470,6 +1470,9 @@
 .custom-payment{
     margin-bottom: 20px;
 }
+#maincontent > div.columns > div > div.product-main-content > div > div.product-info-left.col-sm-19 > div.product-info-main > div.product-social-links > div.custom-payment > picture > img {
+    max-width: 212px;
+}
 .custom-shipping {
     display: flex;
     justify-content: space-between;
@@ -1497,7 +1500,7 @@
     justify-content: flex-end;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 19px;
     text-align: center;
     text-decoration-line: underline;
@@ -1522,7 +1525,7 @@
 .custom-style-a-mobile{
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 19px;
     text-align: center;
     text-decoration: underline !important;
