change checkout mobile style

--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
@@ -342,7 +342,7 @@
         }
         #checkout-step-shipping, #checkout-step-shipping_method {
             padding: 0px 16px;
-        } 
+        }
         #checkout-payment-method-load > div > div > div.payment-method.payment-method-braintree, #checkout-payment-method-load .payment-method {
             padding: 0px 16px;
         }
@@ -355,6 +355,17 @@
         }
         .osc #opc-sidebar .opc-block-summary {
             padding: 0 16px;
+            margin-top: 8px;
+        }
+        #payment {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        .osc ol {
+            margin-bottom: 0;
+        }
+        .osc ol > li {
+            margin-bottom: 8px;
         }
     }
     @media screen and (max-width: 428px) {
