--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_cmspage.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_cmspage.less
@@ -300,7 +300,7 @@
 			line-height:95px;
 			text-align:center;
 			.abs-borderradius(100%);
-			border:none;
+			border:none;123456
 			&:before{
                 display: inline-block;
                 font-family: 'icomoon';
